alekbuilderror
   Compiling compute_tools v0.1.0 (/home/alek/Desktop/neon0/compute_tools)
error[E0599]: no method named `with_context` found for enum `Result` in the current scope
  --> compute_tools/src/pg_extensions.rs:71:10
   |
71 |         .with_context(|| format!("Error opening workdir '{}'", workdir.display()))?;
   |          ^^^^^^^^^^^^ method not found in `Result<PathBuf, Error>`
   |
   = help: items from traits can only be used if the trait is in scope
help: the following traits are implemented but not in scope; perhaps add a `use` for one of them:
   |
2  | use anyhow::Context;
   |
2  | use opentelemetry_api::trace::context::FutureExt;
   |

error[E0425]: cannot find function `initialize_config` in this scope
  --> compute_tools/src/pg_extensions.rs:75:22
   |
75 |     let conf = match initialize_config(&cfg_file_path, arg_matches, &workdir)? {
   |                      ^^^^^^^^^^^^^^^^^ not found in this scope

error[E0308]: mismatched types
   --> compute_tools/src/pg_extensions.rs:79:23
    |
79  |             return Ok(());
    |                    -- ^^ expected struct `RemoteStorageConfig`, found `()`
    |                    |
    |                    arguments to this enum variant are incorrect
    |
help: the type constructed contains `()` due to the type of the argument passed
   --> compute_tools/src/pg_extensions.rs:79:20
    |
79  |             return Ok(());
    |                    ^^^--^
    |                       |
    |                       this argument influences the type of `Ok`
note: tuple variant defined here
   --> /home/alek/.rustup/toolchains/1.68.2-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/core/src/result.rs:507:5
    |
507 |     Ok(#[stable(feature = "rust1", since = "1.0.0")] T),
    |     ^^

error[E0308]: mismatched types
   --> compute_tools/src/pg_extensions.rs:86:19
    |
86  |         return Ok(None);
    |                -- ^^^^ expected struct `RemoteStorageConfig`, found enum `Option`
    |                |
    |                arguments to this enum variant are incorrect
    |
    = note: expected struct `remote_storage::RemoteStorageConfig`
                 found enum `Option<_>`
help: the type constructed contains `Option<_>` due to the type of the argument passed
   --> compute_tools/src/pg_extensions.rs:86:16
    |
86  |         return Ok(None);
    |                ^^^----^
    |                   |
    |                   this argument influences the type of `Ok`
note: tuple variant defined here
   --> /home/alek/.rustup/toolchains/1.68.2-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/core/src/result.rs:507:5
    |
507 |     Ok(#[stable(feature = "rust1", since = "1.0.0")] T),
    |     ^^

Some errors have detailed explanations: E0308, E0425, E0599.
For more information about an error, try `rustc --explain E0308`.
error: could not compile `compute_tools` due to 4 previous errors
